--- a/packages/venia-concept/src/components/MiniCart/product.css
+++ b/packages/venia-concept/src/components/MiniCart/product.css
@@ -1,4 +1,5 @@
 .root {
+  position: relative;
     align-content: start;
     display: grid;
     grid-gap: 0.375rem 1rem;
@@ -12,7 +13,6 @@
 
 .root_masked {
     composes: root;
-    
 }
 
 .mask {
@@ -89,3 +89,24 @@
     display: inline-flex;
 }
 
+.modal {
+    position: absolute;
+    left: -24px;
+    right: -24px;
+    top: -7px;
+    bottom: -7px;
+    background-color: rgb(var(--venia-teal));
+    opacity: 0.1;
+    z-index: 2;
+}
+
+.subMenu {
+    position: relative;
+    display: inline-block;
+
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    align-self: center;
+}
