Added basic query for search function

--- a/packages/venia-concept/src/components/Search/search.css
+++ b/packages/venia-concept/src/components/Search/search.css
@@ -2,7 +2,7 @@
     align-items: center;
     display: none;
     opacity: 0;
-    visibility: collapse; 
+    visibility: hidden; 
     flex: none;
     justify-content: center;
     order: 1; 
