--- a/packages/venia-concept/src/components/Section/section.css
+++ b/packages/venia-concept/src/components/Section/section.css
@@ -3,23 +3,22 @@
     width: 100%;
 }
 .root:focus {
-    background-image: radial-gradient(circle, rgb(var(--venia-grey)), white);
     outline: 0 none;
 }
 
 .content {
     align-items: center;
     border-bottom: 1px solid rgb(var(--venia-border));
-    display: grid;
-    grid-template-columns: 6rem 1fr;
-    justify-items: start;
+    display: flex;
     margin: 0 1.5rem;
     min-height: 4.5rem;
     padding: 1rem 0;
     text-align: left;
+    position: relative;
 }
 
 .label {
+    width: 6em;
     color: rgb(var(--venia-teal));
     font-size: 14px;
     font-weight: 600;
@@ -34,7 +33,11 @@
     white-space: nowrap;
 }
 
+.icon {
+    position: absolute;
+    right: 0;
+}
+
 .icon * {
-    vertical-align: sub;
     height: 1rem;
 }
